--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -12,6 +13,20 @@ code {
     monospace;
 }
 
-.App {
-  background-color: red !important;
+/* print media query */
+@media print {
+  .no-print {
+    display: none !important;
+  }
+  .printable-paper {
+    border: none !important;
+    box-shadow: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+
+    max-width: 100% !important;
+    min-width: 100% !important;
+    width: 100% !important;
+  }
 }
+
